Upgrade to Java 16.